src/test/deca/syntax/invalid/created/only_obrace.deca
// Description :
//    brace ouvrante jamais fermée
//
// Resultats :
//		Syntaxe error

{
